--- a/liblangutil/CMakeLists.txt
+++ b/liblangutil/CMakeLists.txt
@@ -13,6 +13,7 @@ set(sources
 	ParserBase.h
 	Scanner.cpp
 	Scanner.h
+	ScannerBySourceName.h
 	SemVerHandler.cpp
 	SemVerHandler.h
 	SourceLocation.h
